Arreglo moviles y enlace anime

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
 <nav id="sidebar">
-  <a href="#inicio">Inicio</a>
+  <button id="menu-toggle">☰</button><a href="#inicio">Inicio</a>
   <a href="#Solo_Leveling"> Solo Leveling</a>
   <a href="#One_Piece">One Piece</a>
-  <a class="icon-link" href="https://www.animeflv.net/" target="_blank">
+  <a class="icon-link" href="https://www3.animeflv.net/" target="_blank">
   <img src="https://images.sftcdn.net/images/t_app-cover-s-16-9,f_auto/p/c8a837fe-4aa4-4be6-aef5-19625e5806bd/1415372956/animeflv-oficial-anime-online-screenshot" 
        alt="AnimeFLV" 
        style="width:100px; height:auto; background:white; border-radius:5px; padding:5px;">
