--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
   <a href="#One_Piece">One Piece</a>
   <a class="icon-link" href="https://www3.animeflv.net/" target="_blank">
   <img src="https://images.sftcdn.net/images/t_app-cover-s-16-9,f_auto/p/c8a837fe-4aa4-4be6-aef5-19625e5806bd/1415372956/animeflv-oficial-anime-online-screenshot" 
-       alt="AnimeFLV" 
-       style="width:100px; height:auto; background:white; border-radius:5px; padding:5px;">
+       alt="AnimeFLV">
   </a>
   <a class="icon-link" href="https://creator.netmarble.com/en/sololv/ranking/sontitan" target="_blank">
-  <img src="https://blog.gamebench.net/hubfs/Netmarble%20logo.png" alt="Netmarble" style="width:100px; height:auto; background:white; border-radius:5px; padding:5px;">
+  <img src="https://blog.gamebench.net/hubfs/Netmarble%20logo.png" alt="Netmarble">
   </a>
   <a class="icon-link" href="https://www.youtube.com/watch?v=A22gqDmt404" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" style="width:70px; height:auto;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" >
   </a>
 </nav>
 
