--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-
+<button id="menu-toggle">☰</button>
 <nav id="sidebar">
-  <button id="menu-toggle">☰</button><a href="#inicio">Inicio</a>
+  <a href="#inicio">Inicio</a>
   <a href="#Solo_Leveling"> Solo Leveling</a>
   <a href="#One_Piece">One Piece</a>
   <a class="icon-link" href="https://www3.animeflv.net/" target="_blank">
