boton y texto con mi nombre

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div id="music-control">🎵 Play</div>
 
 <footer>
-  &copy; 2025 Alejandro García Benítez <span><b>-SOLO LEVELING-</b></span>. Todos los derechos reservados.
+  &copy; 2025 <span> Alejandro García Benítez </span><b> -SOLO LEVELING- </b>.Todos los derechos reservados.
 </footer>
 </body>
 </html>
